﻿v9.7
-----


v9.6
-----
+ Added the ability to activate multiple product codes at once to product activation page
: Improved compatibility with HTTPS Everywhere extension
: Fixed formatting of wishlist numbers on profile pages to match Valve's visual style
: Updated visual style of wishlist pages and made item names on wishlists clickable
: Fixed a bug where badge links on market listings weren't linking to the correct page
: Fixed a bug that caused wishlist reviews to be incorrect for games with no review data
- Removed market game list collapsing as this feature was added to Steam by Valve
- Removed ACRTAG app warning messages as this feature now applies universally to all apps

v9.5
-----
+ Added a link to logged-in users account dropdown to redeem keys from the Steam website
+ Added the amount of items sold in the last 24 hours to the market listing pages
+ Added a store page link to badge progress pages
+ Added price history support for Chrono.gg, Dreamgame, and Savemi stores
: Fixed a bug which caused some users "Sell" buttons to disappear when selecting items in inventory
: Fixed a bug that caused video resolution selection feature to be hidden
: Fixed a bug where package info buttons were malformed
: Fixed a bug that caused the "Get Help" buttons not to direct users to the correct support website
: Fixed a bug that caused "Not Interested" highlighting not to work correctly on activity pages
: Fixed a bug that caused Twitch streaming info not to display on profiles without a showcase activated
- Removed market relisting function, as this is no longer supported by Valve
- Removed support for Coinplay.io in price comparisons 

v9.4
-----
+ Added the ability to create custom user-configurable profile links
: Updated the visual style of app page elements to more closely match Valve's new style
: Fixed a bug that caused some market items not to display features correctly in user's inventories