@@ -2158,17 +2158,6 @@ function send_age_verification() {
 	});
 }
 
-// Display Steam Wallet funds in header
-function add_wallet_balance_to_header() {
-	storage.get(function(settings) {
-		if (settings.add_wallet_balance === undefined) { settings.add_wallet_balance = true; storage.set({'add_wallet_balance': settings.add_wallet_balance}); }
-		if (settings.add_wallet_balance) {
-			$("#global_action_menu").append("<div id='es_wallet' style='text-align:right; line-height: normal;'>");
-			$("#es_wallet").load(protocol + '//store.steampowered.com/about/ #header_wallet_ctn');
-		}
-	});
-}
-
 // Checks to see if the extension has been updated
 function version_check() {
 	storage.get(function(settings) {
@@ -9140,7 +9129,6 @@ $(document).ready(function(){
 
 					if (is_signed_in) {
 						add_birthday_celebration();
-						add_wallet_balance_to_header();
 					}
 
 					switch (true) {
